logs/ib-insync.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ib_insync'...
Compiling './lib/python3.5/site-packages/ib_insync/client.py'...
***   File "./lib/python3.5/site-packages/ib_insync/client.py", line 141
    f'Connecting to {host}:{port} with clientId {clientId}...')
                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ib_insync/contract.py'...
***   File "./lib/python3.5/site-packages/ib_insync/contract.py", line 66
    kwargs = ', '.join(f'{k}={v!r}' for k, v in attrs.items())
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ib_insync/flexreport.py'...
***   File "./lib/python3.5/site-packages/ib_insync/flexreport.py", line 86
    f'/Universal/servlet/FlexStatementService.SendRequest?'
    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ib_insync/ib.py'...
***   File "./lib/python3.5/site-packages/ib_insync/ib.py", line 98
    conn = (f'connected to {self.client.host}:'
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ib_insync/objects.py'...
***   File "./lib/python3.5/site-packages/ib_insync/objects.py", line 61
    kwargs = ', '.join(f'{k}={v!r}' for k, v in self.nonDefaults().items())
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ib_insync/order.py'...
***   File "./lib/python3.5/site-packages/ib_insync/order.py", line 95
    kwargs = ', '.join(f'{k}={v!r}' for k, v in attrs.items())
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ib_insync/wrapper.py'...
***   File "./lib/python3.5/site-packages/ib_insync/wrapper.py", line 120
    raise ValueError(f'eventName must be one of {events}')
                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ib_insync-0.8.17.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
